--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Python cache files
+__pycache__/
+*.py[cod]
+*.pyo
+
+# Virtual environments
 .venv/
+env/
+
+# Environment variables
+.env
+
+# IDE configurations
+.vscode/
+.idea/
+
+# Logs and local files
+*.log
